Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51372

tst_controls/ComboBox crashing on Ubuntu 14.04

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • None
    • 5.7
    • None
    • Ubuntu 14.04
    • 68abe8164943e50f3bac4260a6985c795f5abe3e

    Description

      ********* Start testing of qtquickcontrols *********
      Config: Using QtTest library 5.7.0, Qt 5.7.0 (x86_64-little_endian-lp64 shared (dynamic) debug build; by GCC 4.8.4)
      [...]
      PASS   : qtquickcontrols::Tests_ComboBox::initTestCase()
      QFATAL : qtquickcontrols::Tests_ComboBox::test_activated() ASSERT failure in QList<T>::at: "index out of range", file ../../include/QtCore/../../src/corelib/tools/qlist.h, line 537
      FAIL!  : qtquickcontrols::Tests_ComboBox::test_activated() Received a fatal error.
         Loc: [Unknown file(0)]
      Totals: 65 passed, 1 failed, 2 skipped, 0 blacklisted, 10039ms
      ********* Finished testing of qtquickcontrols *********
      
      Program received signal SIGABRT, Aborted.
      0x00007ffff5f18cc9 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
      56	../nptl/sysdeps/unix/sysv/linux/raise.c: No such file or directory.
      (gdb) bt
      #0  0x00007ffff5f18cc9 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
      #1  0x00007ffff5f1c0d8 in __GI_abort () at abort.c:89
      #2  0x00007ffff6871135 in qt_message_fatal (context=..., message=...) at global/qlogging.cpp:1612
      #3  0x00007ffff686d630 in QMessageLogger::fatal (this=0x7fffffff0be0, msg=0x7ffff6beb7b8 "ASSERT failure in %s: \"%s\", file %s, line %d")
          at global/qlogging.cpp:786
      #4  0x00007ffff6866929 in qt_assert_x (where=0x7fffeedbe578 "QList<T>::at", what=0x7fffeedbe565 "index out of range", 
          file=0x7fffeedbe530 "../../include/QtCore/../../src/corelib/tools/qlist.h", line=537) at global/qglobal.cpp:3069
      #5  0x00007fffeed724a5 in QList<QDBusPlatformMenuItem*>::at (this=0x9d11e8, i=0) at ../../include/QtCore/../../src/corelib/tools/qlist.h:537
      #6  0x00007fffeed716ba in QDBusPlatformMenu::menuItemAt (this=0x9d11b0, position=0) at dbusmenu/qdbusplatformmenu.cpp:277
      #7  0x00007fffdad1145f in QQuickMenu1::setupMenuItem (this=0x7ddfb0, item=0x7b4a90, platformIndex=0) at qquickmenu.cpp:803
      #8  0x00007fffdad1125b in QQuickMenu1::insertItem (this=0x7ddfb0, index=0, menuItem=0x7b4a90) at qquickmenu.cpp:762
      #9  0x00007fffdad3adb3 in QQuickMenu1::qt_static_metacall (_o=0x7ddfb0, _c=QMetaObject::InvokeMetaMethod, _id=26, _a=0x7fffffff12a0)
          at .moc/moc_qquickmenu_p.cpp:279
      #10 0x00007fffdad3b6dd in QQuickMenu1::qt_metacall (this=0x7ddfb0, _c=QMetaObject::InvokeMetaMethod, _id=26, _a=0x7fffffff12a0) at .moc/moc_qquickmenu_p.cpp:461
      #11 0x00007ffff563726b in QQmlVMEMetaObject::metaCall (this=0x8d9be0, o=0x7ddfb0, c=QMetaObject::InvokeMetaMethod, _id=40, a=0x7fffffff12a0)
          at qml/qqmlvmemetaobject.cpp:883
      #12 0x00007ffff5637232 in QQmlVMEMetaObject::metaCall (this=0x1021300, o=0x7ddfb0, c=QMetaObject::InvokeMetaMethod, _id=40, a=0x7fffffff12a0)
          at qml/qqmlvmemetaobject.cpp:881
      #13 0x00007ffff6ac1e4f in QMetaObject::metacall (object=0x7ddfb0, cl=QMetaObject::InvokeMetaMethod, idx=40, argv=0x7fffffff12a0) at kernel/qmetaobject.cpp:299
      #14 0x00007ffff56a8962 in QQmlObjectOrGadget::metacall (this=0x7fffffff1790, type=QMetaObject::InvokeMetaMethod, index=40, argv=0x7fffffff12a0)
          at qml/qqmlpropertycache.cpp:1563
      #15 0x00007ffff5608a3d in CallMethod (object=..., index=40, returnType=43, argCount=2, argTypes=0x1421744, engine=0x45a6b0, callArgs=0x7fffdb000fc0)
          at jsruntime/qv4qobjectwrapper.cpp:1130
      #16 0x00007ffff5609539 in CallPrecise (object=..., data=..., engine=0x45a6b0, callArgs=0x7fffdb000fc0) at jsruntime/qv4qobjectwrapper.cpp:1379
      #17 0x00007ffff56098fb in CallOverloaded (object=..., data=..., engine=0x45a6b0, callArgs=0x7fffdb000fc0, propertyCache=0x7fffd42b3b00)
          at jsruntime/qv4qobjectwrapper.cpp:1452
      #18 0x00007ffff560bb77 in QV4::QObjectMethod::callInternal (this=0x7fffdb001010, callData=0x7fffdb000fc0) at jsruntime/qv4qobjectwrapper.cpp:1864
      #19 0x00007ffff560b5f7 in QV4::QObjectMethod::call (m=0x7fffdb001010, callData=0x7fffdb000fc0) at jsruntime/qv4qobjectwrapper.cpp:1801
      #20 0x00007ffff54eb74c in QV4::Object::call (this=0x7fffdb001010, d=0x7fffdb000fc0)
          at /home/jpnurmi/Projects/qt-57/qtbase/include/QtQml/5.7.0/QtQml/private/../../../../../../qtdeclarative/src/qml/jsruntime/qv4object_p.h:330
      #21 0x00007ffff562b401 in QV4::Runtime::callProperty (engine=0x45a6b0, nameIndex=246, callData=0x7fffdb000fc0) at jsruntime/qv4runtime.cpp:1030
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Unassigned Unassigned
            jpnurmi J-P Nurmi
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes