Fix QDBusPlatformMenu::menuItemAt()

Other platform menu implementations check that the index is not out of
bounds, so make QDBusPlatformMenu::menuItemAt() do the same.

Change-Id: I1d2e42681f2dbfff8b80044141d620bddbc3b6aa
Task-number: QTBUG-51372
Reviewed-by: Simon Hausmann <simon.hausmann@theqtcompany.com>
Reviewed-by: Dmitry Shachnev <mitya57@gmail.com>

cregit: 45feee5f93fad5396af2653ed904a535bc5b7938 https://github.com/qt/qtbase/commit/45feee5f93fad5396af2653ed904a535bc5b7938