src/platformsupport/dbusmenu/qdbusplatformmenu.cpp
@@ -1089,7 +1089,7 @@ block|{
 return|return
 name|m_items
 operator|.
-name|at
+name|value
 argument_list|(
 name|position
 argument_list|)
